--- a/style/style.css
+++ b/style/style.css
@@ -18,7 +18,7 @@ body {
 }
 
 .container div.six {
-  top: 8vh;
+  top: 10vh;
   z-index: 1;
 }
 
@@ -38,7 +38,7 @@ body {
 }
 
 .one {
-  font-size: 4.5rem;
+  font-size: 4rem;
 }
 
 .one > img {
@@ -117,12 +117,13 @@ body {
 
 .six {
   position: relative;
-  width: 90%;
+/*   width: 90%; */
 }
 
 .six img {
   display: inline-block;
   max-width: 100%;
+  left=50%;
   height: auto;
   /* left: -20px; */
 }
