--- a/style/style.css
+++ b/style/style.css
@@ -123,7 +123,7 @@ body {
 .six img {
   display: inline-block;
   max-width: 100%;
-  left=50%;
+  left=10px;
   height: auto;
   /* left: -20px; */
 }
